--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   color: #fff;
   font-family: 'Noto Sans', sans-serif;
 }
-body{
+.body{
   margin:0;
   padding: 0;
 }
@@ -17,15 +17,15 @@ body{
   .input-container {
     max-width: 100%;
   }
-  input {
+  .input {
     font-size: 16px;
     padding: 10px;
   }
-  h1 {
+  .h1 {
     font-size: 24px;
   }
 }
-h1{
+.h1{
   font-size: 33px;
   font-weight: 600;
   padding: 200px;
@@ -64,7 +64,7 @@ h1{
 }
 
 
-input{
+.input{
   border: none;
   background-color: rgba(255,255,255,0.05);
   width: 100%;
@@ -77,7 +77,7 @@ input{
   rgba(0,0,0,0.05) 0 12px 3px,
   rgba(0,0,0,0.09) 0 -3px 5px
 }
-input:focus{
+.input:focus{
   outline: none;
 
 }
@@ -98,7 +98,7 @@ input:focus{
   bottom: 20px;
   cursor: pointer;
 }
-button{
+.button{
   border: solid 1px rgba(255, 255, 255, 0.5);
   background-color: transparent;
   border-radius: 5px;
@@ -107,7 +107,7 @@ button{
   text-align: center;
   cursor: pointer;
 }
-nav{
+.nav{
   border-top: solid 1px rgba(255,2555,255,0.5);
   padding: 10px;
   margin: 10px;
@@ -196,17 +196,6 @@ nav{
 .feed::-webkit-scrollbar-track {
   background: #f1f1f1;
    /* Color of the scrollbar track */
-}
-.side-bar::-webkit-scrollbar {
-  width: 8px; /* Width of the scrollbar */
-}
-
-.side-bar::-webkit-scrollbar-thumb {
-  background: #888; /* Color of the scrollbar thumb */
-}
-
-.side-bar::-webkit-scrollbar-thumb:hover {
-  background: #555; /* Color when hovering over the scrollbar thumb */
 }
 
 .side-bar::-webkit-scrollbar-track {
