--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   color: #fff;
   font-family: 'Noto Sans', sans-serif;
 }
-.body{
+body{
   margin:0;
   padding: 0;
 }
@@ -13,19 +13,7 @@
   display: flex;
 
 }
-@media (max-width: 768px) {
-  .input-container {
-    max-width: 100%;
-  }
-  .input {
-    font-size: 16px;
-    padding: 10px;
-  }
-  .h1 {
-    font-size: 24px;
-  }
-}
-.h1{
+h1{
   font-size: 33px;
   font-weight: 600;
   padding: 200px;
@@ -62,9 +50,7 @@
   font-size: 11px;
   padding: 10px;
 }
-
-
-.input{
+input{
   border: none;
   background-color: rgba(255,255,255,0.05);
   width: 100%;
@@ -77,7 +63,7 @@
   rgba(0,0,0,0.05) 0 12px 3px,
   rgba(0,0,0,0.09) 0 -3px 5px
 }
-.input:focus{
+input:focus{
   outline: none;
 
 }
@@ -85,11 +71,11 @@
   position: relative;
   width: 100%;
   max-width: 650px;
+  min-width: 10px;
   display: flex;
   overflow: hidden; /* Hides overflowing content */
  white-space: nowrap; /* Prevents text from wrapping */
  text-overflow: ellipsis;
-  min-width: fit-content;
 
 }
 #submit {
@@ -98,7 +84,7 @@
   bottom: 20px;
   cursor: pointer;
 }
-.button{
+button{
   border: solid 1px rgba(255, 255, 255, 0.5);
   background-color: transparent;
   border-radius: 5px;
@@ -107,7 +93,7 @@
   text-align: center;
   cursor: pointer;
 }
-.nav{
+nav{
   border-top: solid 1px rgba(255,2555,255,0.5);
   padding: 10px;
   margin: 10px;
@@ -130,6 +116,10 @@
   border-width: 80%;
   padding: 15px;
   margin-bottom: 10px;
+
+ overflow: hidden; /* Hides overflowing content */
+ white-space: nowrap; /* Prevents text from wrapping */
+ text-overflow: ellipsis; 
   
 }
 
@@ -150,7 +140,6 @@
   padding: 20px;
   margin: 8px 0;
   align-items: left;
-  font-size: 10px;
 }
 .feed p{
   color: rgba(255,255,255,0.9);
@@ -162,7 +151,11 @@
   text-size-adjust: 10%;
 
 }
-
+.feed li {
+  text-align: left;
+  color: #ffffff; /* Set your desired color */
+  font-size: 10px; /* Adjust the font size */
+}
 .avatar {
   width: 50px;
   height: 50px;
@@ -197,8 +190,18 @@
   background: #f1f1f1;
    /* Color of the scrollbar track */
 }
+.side-bar::-webkit-scrollbar {
+  width: 8px; /* Width of the scrollbar */
+}
+
+.side-bar::-webkit-scrollbar-thumb {
+  background: #888; /* Color of the scrollbar thumb */
+}
+
+.side-bar::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color when hovering over the scrollbar thumb */
+}
 
 .side-bar::-webkit-scrollbar-track {
   background: #f1f1f1; /* Color of the scrollbar track */
 }
-
