--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,11 @@ input:focus{
   bottom: 20px;
   cursor: pointer;
 }
+.loadingSpinner {
+  width: 3px;  /* Set the desired width */
+  height: 3px; /* Set the desired height */
+  background-color: transparent; /* Set the background color to transparent */
+}
 button{
   border: solid 1px rgba(255, 255, 255, 0.5);
   background-color: transparent;
