--- a/src/index.css
+++ b/src/index.css
@@ -85,9 +85,14 @@ input:focus{
   cursor: pointer;
 }
 .loadingSpinner {
-  width: 3px;  /* Set the desired width */
-  height: 3px; /* Set the desired height */
-  background-color: transparent; /* Set the background color to transparent */
+   position:absolute;
+  right: 0;
+  bottom: 20px;
+  cursor: pointer;
+  width: 10px;  /* Set the desired width */
+  height: 10px; /* Set the desired height */
+  background-color: transparent;
+  opacity: 1;/* Set the background color to transparent */
 }
 button{
   border: solid 1px rgba(255, 255, 255, 0.5);
