--- a/src/index.css
+++ b/src/index.css
@@ -211,6 +211,17 @@ nav{
 .side-bar::-webkit-scrollbar-thumb:hover {
   background: #555; /* Color when hovering over the scrollbar thumb */
 }
+@media (max-width: 768px) {
+  /* Your styles here */
+  .main{
+     display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+  height: auto;
+  width: 100%;
+}
 
 .side-bar::-webkit-scrollbar-track {
   background: #f1f1f1; /* Color of the scrollbar track */
