--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,12 @@ h1{
 .side-bar{
   background-color: #202123;
   height: 100vh;
-  width: 244px;
+  width: 220px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   scroll-behavior: smooth;
+
 }
 .main{
   display: flex;
@@ -84,11 +85,6 @@ input:focus{
   bottom: 20px;
   cursor: pointer;
 }
-.loadingSpinner {
-  width: 3px;  /* Set the desired width */
-  height: 3px; /* Set the desired height */
-  background-color: transparent; /* Set the background color to transparent */
-}
 button{
   border: solid 1px rgba(255, 255, 255, 0.5);
   background-color: transparent;
@@ -98,33 +94,28 @@ button{
   text-align: center;
   cursor: pointer;
 }
-nav{
-  border-top: solid 1px rgba(255,2555,255,0.5);
-  padding: 10px;
-  margin: 10px;
-}
+
 .history{
   padding: 10px;
   margin: 10px;
   flex-direction: column;
   height: 100%;
   width: 85%;
-
+  font-size: smaller;
+  overflow-y: scroll;
 }
 .history li{
   cursor: pointer;
   display: flex;
   list-style-type: none;
-  border: solid 0.5px rgba(255, 255, 255, 0.5);
+  border: solid 0.5px rgba(147, 147, 147, 0.5);
   background-color: transparent;
   border-radius: 4px;
   border-width: 80%;
   padding: 15px;
   margin-bottom: 10px;
-
- overflow: hidden; /* Hides overflowing content */
- white-space: nowrap; /* Prevents text from wrapping */
- text-overflow: ellipsis; 
+  font-size: small; /* Hides overflowing content */
+  text-overflow: ellipsis; 
   
 }
 
@@ -135,21 +126,24 @@ nav{
   text-align: center;
   display: flex;
   flex-direction: column;
-
+  font-size: small;
+  
 }
 .feed li{
   display: flex;
   background-color: #444656;
   width: 100%;
   height: auto;
-  padding: 20px;
+  padding: 5px;
   margin: 8px 0;
   align-items: left;
+  text-wrap: wrap;
 }
 .feed p{
   color: rgba(255,255,255,0.9);
   font-size: 14px;
   text-align: left;
+  font-size: small;
 }
 .feed p.role{
   min-width: fit-content;
@@ -157,6 +151,7 @@ nav{
 
 }
 .feed li {
+  block-size: auto;
   text-align: left;
   color: #ffffff; /* Set your desired color */
   font-size: 10px; /* Adjust the font size */
@@ -176,7 +171,7 @@ nav{
   scroll-behavior: smooth;
   max-height: 700px; /* Adjust the maximum height as needed */
   overflow-x: hidden;
-  font-size: large; /* Enable vertical scrollbar when content overflows */
+  font-size: small; /* Enable vertical scrollbar when content overflows */
 }
 
 .feed::-webkit-scrollbar {
@@ -191,22 +186,49 @@ nav{
   background: #555; /* Color when hovering over the scrollbar thumb */
 }
 
-.feed::-webkit-scrollbar-track {
-  background: #f1f1f1;
-   /* Color of the scrollbar track */
-}
-.side-bar::-webkit-scrollbar {
+
+.history::-webkit-scrollbar {
   width: 8px; /* Width of the scrollbar */
 }
 
-.side-bar::-webkit-scrollbar-thumb {
+.history::-webkit-scrollbar-thumb {
   background: #888; /* Color of the scrollbar thumb */
 }
 
-.side-bar::-webkit-scrollbar-thumb:hover {
+.history::-webkit-scrollbar-thumb:hover {
   background: #555; /* Color when hovering over the scrollbar thumb */
 }
 
-.side-bar::-webkit-scrollbar-track {
-  background: #f1f1f1; /* Color of the scrollbar track */
+.loadingSpinner{
+  width: 40px;
+  height: 40px;
+
+}
+.today {
+  font-weight: bold;
+  color: rgb(186, 186, 186); /* Add any other styles you want */
+}
+.icon{
+  margin-right: 180px;
+}
+.sidebar-info {
+  width: 100%;
+  padding-top: 1rem;
+  border-top: 0.05rem solid rgba(255, 255, 255, 0.5);
+
+}
+
+.sidebar-info-upgrade,
+.sidebar-info-user {
+  font-size: small;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+
+.sidebar-info-upgrade-subtext {
+  font-size: 0.75rem;
+  color: #8e8fa1;
 }
