--- a/src/index.css
+++ b/src/index.css
@@ -108,10 +108,12 @@ button{
   cursor: pointer;
   display: flex;
   list-style-type: none;
-  border: solid 0.5px rgba(147, 147, 147, 0.5);
+ border-width: 0 0 0 80%;
+border-style: solid;
+border-color: hsla(0, 0%, 58%, 0.5);
+
   background-color: transparent;
   border-radius: 4px;
-  border-width: 80%;
   padding: 15px;
   margin-bottom: 10px;
   font-size: small; /* Hides overflowing content */
